--- a/theme/templates/lineas_accion_3.html
+++ b/theme/templates/lineas_accion_3.html
@@ -7,7 +7,7 @@
     <br>
     <hr style="border-top: 1px solid; width: 50%;" class="dark:text-white">
     <br>
-    <h1 class="animate-pulse mb-4 text-3xl font-extrabold text-zinc-950 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea<br>de Acción 3</span></h1>
+    <h1 class="animate-pulse mb-4 text-3xl font-extrabold text-zinc-950 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r from-fuchsia-500 to-cyan-500">Línea<br>de Acción 3</span></h1>
     <br>
     <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
     <br>
@@ -26,10 +26,10 @@
             <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white text-center">Evolución del porcentaje en el área de investigación del monto financiamiento FONDEF, según sexo y año (2022-2023)</p>
             <br>
             {{ chart|safe }}
-            <p style="text-align: center" class="text-lg font-thin text-zinc-950 lg:text-xl dark:text-white text-center"><em>
+            <p style="text-align: center" class="text-lg font-thin text-zinc-950 lg:text-xl dark:text-white text-center">
                 Fuente: Elaboración propia, a partir de las bases de datos de ANID 
                 Proyectos (bdh_proyectos_2003_2022 y bdh_proyectos_2003_2023)
-            </em></p>
+            </p>
             </div>
         </div>
         <br>
@@ -40,10 +40,10 @@
             <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución del Monto Total de Financiamiento Fondef ($), según sexo y año (2020-2023).</p>
             <br>
             {{ chart2|safe }}
-            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>
+            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white">
                 Fuente: Elaboración propia, a partir de la base de datos ANID Proyectos 
                 (bdh_proyectos_2003_2022 y bdh_proyectos_2023_2032).
-            </em></p>
+            </p>
             </div>
         </div>    
     </div>
