--- a/theme/templates/banner_lineas.html
+++ b/theme/templates/banner_lineas.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block content %}
-<div class="container-fluid p-0 m-0">
-    <img src="{% static 'img/banner_lineas2.jpg' %}" class="img-fluid" alt="Responsive image" />
+<div class="relative pt-16 z-40">
+    <img src="{% static 'img/banner_lineas2.jpg' %}" class="w-full h-full" alt="Responsive image" />
 </div>
 {% endblock %}
