--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -15,6 +15,14 @@
     <!-- Plotly CDN JS -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
+    <!--Ubuntu Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
+    <!--Echarts-->
+    <script src=" https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js "></script>
+
     <!--Favicon-->
     <link rel="icon" href="{% static 'img/estadisticas.png' %}" type="image/png" sizes="16x16">
 
@@ -29,16 +37,16 @@
     
 </head>
 
-<body class="bg-indigo-200 dark:bg-indigo-950">
+<body class="bg-indigo-200 dark:bg-indigo-950" style="font-family: Ubuntu, sans-serif;"> 
 
 {% block navbar %}
     <!-- NavBar Menú -->
     <header class="fixed w-full z-50 left-0 right-0 top-0">
-        <nav class="shadow-lg bg-indigo-400 dark:bg-indigo-950 dark:text-white text-zinc-950 border-gray-200 px-4 lg:px-6 py-2.5">
+        <nav class="shadow-lg bg-gradient-to-r from-indigo-400 to-purple-500 dark:bg-indigo-950 dark:text-white text-zinc-950 border-gray-200 px-4 lg:px-6 py-2.5">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl text-zinc-950">
-                <a href="#" class="flex items-center" style="text-decoration: none;">
+                <a href="/" class="flex items-center" style="text-decoration: none;">
                     <img src="{% static 'img/logo_ines.png' %}" class="brightness-125 mr-3 h-6 sm:h-9" alt="InES Género Logo" />
-                    <span class="self-center text- font-semibold whitespace-nowrap dark:text-white">Observatorito<br>Género y Ciencia</span>
+                    <span class="self-center text- font-semibold whitespace-nowrap dark:text-white">Observatorio<br>Género y Ciencia</span>
                 </a> 
                 <div class="flex items-center lg:order-2">
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
@@ -47,7 +55,7 @@
                         <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </button>
                     &nbsp;&nbsp;
-                    <button type="button" id="theme-toggle" class="text-white bg-indigo-950 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-indigo-400">
+                    {% comment %} <button type="button" id="theme-toggle" class="text-white bg-indigo-950 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-indigo-400">
                         <span id="theme-toggle-dark-icon">
                             <!-- Icono de la luna -->
                              dark
@@ -62,7 +70,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
                             </svg>
                         </span>
-                    </button>
+                    </button> {% endcomment %}
                 </div>
                 <div class="hidden justify-between w-full lg:flex lg:w-auto lg:order-1 text-zinc-950" id="mobile-menu-2">
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 text-zinc-950 dark:text-white">
@@ -71,7 +79,7 @@
                         </li>
                         <!--Dropdown-->
                         <li>
-                            <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-indigo-400 md:hover:bg-transparent md:border-0 md:hover:text-zinc-950 md:p-0 md:w-auto dark:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-indigo-950 md:dark:hover:bg-transparent"><a href="{% url 'lineas_accion' %}" style="text-decoration: none;">Lineas de Acción&nbsp;</a>&nbsp;&nbsp;<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-indigo-400 md:hover:bg-transparent md:border-0 md:hover:text-zinc-950 md:p-0 md:w-auto dark:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-indigo-950 md:dark:hover:bg-transparent"><a href="{% url 'lineas_accion' %}" style="text-decoration: none;">Líneas de Acción&nbsp;</a>&nbsp;&nbsp;<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                   </svg></button>
                             <!-- Dropdown menu -->
@@ -94,10 +102,10 @@
                             </div>
                         </li>
                         <li>
-                            <a href="{% url 'repositorio' %}" class="block py-2 pr-4 pl-3 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-white lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" style="text-decoration: none;">Repositorio</a>
+                            <a href="{% url 'repositorio' %}" class="block py-2 pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 lg:dark:hover:bg-transparent" style="text-decoration: none;">Repositorio</a>
                         </li>
                         <li>
-                            <a href="https://generoenciencia.ufro.cl/contacto" class="block py-2 pr-4 pl-3 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-white lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" style="text-decoration: none;">Contacto</a>
+                            <a href="https://generoenciencia.ufro.cl/nuestro-equipo/" class="block py-2 pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 lg:dark:hover:bg-transparent" style="text-decoration: none;">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -180,6 +188,8 @@
             </ul>
         </div>
     </div>
+
+    
    
 
 {% endblock navbar %}
@@ -196,6 +206,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 
 <script src="https://open.spotify.com/embed/iframe-api/v1" async></script>
+
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
 <script>
     var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
