--- a/theme/templates/footer.html
+++ b/theme/templates/footer.html
@@ -1,28 +1,21 @@
 {% load static %}
-<footer class="bg-indigo-400 dark:bg-indigo-950 dark:text-white shadow">
+<footer class="bg-gradient-to-r from-indigo-400 to-purple-500 dark:bg-indigo-950 dark:text-white shadow">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
-        <div class="sm:flex sm:items-center sm:justify-between">
-            <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse" style="text-decoration: none;">
-                <img src="{% static 'img/logo_ines.png' %}" class="h-8" alt="Flowbite Logo" />
-                <span class="self-center text-2xl text-zinc-950 dark:text-white font-semibold whitespace-nowrap">Observatorio<br>Género y Ciencia</span>
-            </a>
-            <ul class="flex flex-wrap items-center mb-6 text-sm font-semibold text-zinc-950 dark:text-white sm:mb-0" style="text-decoration: none;">
-                <li>
-                    <a href="/" class="me-4 md:me-6" style="text-decoration: none;">Inicio</a>
+        <div class="flex flex-col items-center">
+            <ul class="flex flex-wrap justify-center items-center mb-6 text-sm gap-6 font-semibold text-zinc-950 dark:text-white sm:mb-0" style="text-decoration: none;">
+                <li class="flex justify-center">
+                    <img src="https://vrip.ufro.cl/wp-content/uploads/2022/01/newRecurso-4VRIP.png" width="200px" height="80px">
                 </li>
-                <li>
-                    <a href="{% url 'lineas_accion' %}" class="me-4 md:me-6" style="text-decoration: none;">Lineas Acción</a>
+                <li class="flex justify-center">
+                    <img src="https://intranet.ufro.cl/imagenes/ufro/1-3.png" width="200px" height="80px">
                 </li>
-                <li>
-                    <a href="{% url 'repositorio' %}" class="me-4 md:me-6" style="text-decoration: none;">Repositorio</a>
-                </li>
-                <li>
-                    <a href="https://generoenciencia.ufro.cl/contacto" class="me-4 md:me-6" style="text-decoration: none;">Contacto</a>
+                <li class="flex justify-center">
+                    <img src="https://anid.cl/wp-content/uploads/2022/04/anid_rojo_azul.png" width="80px" height="80px">
                 </li>
             </ul>
         </div>
         <hr class="my-6 border-gray-200 dark:text-white sm:mx-auto lg:my-8" />
-        <span class="block text-sm text-center text-zinc-950 dark:text-white sm:text-center">© Observatorio Género y Ciencia 2024, Universidad de La Frontera<br>Todos los derechos reservados</span>
+        <span class="block text-sm text-center text-zinc-950 dark:text-white sm:text-center">© Observatorio Género y Ciencia 2024, Proyecto InES Género UFRO<br>Todos los derechos reservados</span>
         <div class="flex mt-4 sm:justify-center sm:mt-0">
               <a href="https://www.linkedin.com/in/generoencienciaufro/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40">
