--- a/theme/templates/lineas_accion.html
+++ b/theme/templates/lineas_accion.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block content %}
+{% load static %}
+<br>
+<br>
+<br>
 <div class="container-fluid p-0 m-0 text-center">
   <img src="{% static 'img/banner_lineasaccion.jpg' %}" class="h-auto max-w-full" alt="Responsive image" />
 </div>  
@@ -11,7 +14,7 @@
   <br>
   <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
   <br>
-  <h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Líneas <br>de Acción</span></h1>
+  <h1 class="animate-shake mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r from-fuchsia-500 to-cyan-500">Líneas <br>de Acción</span></h1>
   <br>
   <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
   <br>
@@ -38,7 +41,7 @@
             </div>  
           </div>
           <div class="col">
-            <div class="max-w-sm p-6 bg-indigo-400 border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
+            <div class="animate-jump max-w-sm p-6 bg-indigo-400 border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
               <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"> 
                 Liderazgo Femenino<br>
                 I+D+i+e
@@ -49,7 +52,7 @@
         </div>
         <!--segunda fila-->
         <div class="col">
-          <div class="max-w-sm p-6 bg-indigo-400 border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
+          <div class="animate-jump max-w-sm p-6 bg-indigo-400 border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
             <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">  
               Financiamiento<br>
               y Patrocionio I+D+i+e<br>
@@ -59,7 +62,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="max-w-sm p-6 bg-indigo-400 dark:bg-indigo-950 border rounded-lg dark:border-gray-700 focus:ring-4 focus:outline-none shadow-xl">
+          <div class="animate-jump max-w-sm p-6 bg-indigo-400 dark:bg-indigo-950 border rounded-lg dark:border-gray-700 focus:ring-4 focus:outline-none shadow-xl">
             <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">
               Capital<br>Humano<br>
             </h5>
