--- a/theme/templates/lineas_accion_2.html
+++ b/theme/templates/lineas_accion_2.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% block content %}
 {% include 'banner_lineas.html' %}
   {% comment %} <div class="container-fluid" style="background-color: #dfdfdf;"> {% endcomment %}
@@ -9,7 +8,7 @@
       <br>
       <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
       <br>
-      <h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea<br>de Acción 2</span></h1>
+      <h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r from-fuchsia-500 to-cyan-500">Línea<br>de Acción 2</span></h1>
       <br>
       <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
       <br>
@@ -30,8 +29,8 @@
             <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución en el área de investigación de publicaciones 2022-2023</p>  
             <br>
             {{ chart|safe }}
-            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
-              de la Universidad de La Frontera 2022-2023.</em></p>
+            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
+              de la Universidad de La Frontera 2022-2023.</p>
           </div>
         </div>  
       </div>
@@ -55,15 +54,17 @@
       <br>
       <hr>
       <br>
+      <div class="container">
         <div class="row">
           <div class="col-md-6">
             <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución de Liderazgo en Publicaciones Científicas (2020-2023)</p>
             <br>
             {{ chart2|safe }}
-            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
-              de la Universidad de La Frontera 2022-2023.</em></p>
+            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
+              de la Universidad de La Frontera 2022-2023.</p>
           </div>
-        </div>  
+        </div>
+      </div>  
       <br>
       {% comment %} <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
           Las publicaciones lideradas en la Universidad de La Frontera para el período 2020-2023, 
@@ -85,14 +86,14 @@
       <br>
       <hr>
       <br>
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
           <div class="col-md-8">
           <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución Proyectos de Innovación y Transferencia Tecnológica (2022-2023)</p>
           <br>  
           {{ chart3|safe }}
-          <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de la base de datos Unidad de
-        Transferencia Tecnológica de la Universidad de La Frontera 2020-2023.</em></p>
+          <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de la base de datos Unidad de
+        Transferencia Tecnológica de la Universidad de La Frontera 2020-2023.</p>
           </div>
         </div>  
       </div>
